--- a/public/html/shuoshuo.html
+++ b/public/html/shuoshuo.html
@@ -5,16 +5,15 @@
     <title>shuoshuo</title>
 
     <style>
-        #shuoshuo-ul li {
-            border: 1px solid #666;
-            border-radius: 4px;
-            padding: 3px;
-            margin-bottom: 5px;
-            background-color: #fffcf4;
-        }
-
-        img {
-            vertical-align: middle;
+        span.imgSize {
+            position: absolute;
+            bottom: 0;
+            height: 1rem;
+            line-height: 1rem;
+            text-align: center;
+            width: 84%;
+            left: 1rem;
+            background: rgba(0, 0, 0, .5);
         }
     </style>
     <script src="../lib/jquery-3.1.1.js"></script>
@@ -25,7 +24,7 @@
 <body style="padding: 30px;">
 <div class="ui container">
     <div class="ui grid">
-        <section class="six wide column">
+        <section class="four wide column">
             <h2>日期</h2>
             <ul>
                 <li>2017</li>
@@ -34,27 +33,24 @@
                 <li>2014</li>
             </ul>
         </section>
-        <article class="ten wide column">
+        <article class="twelve wide column">
             <div class="ui fluid massive icon input">
                 <textarea id="s_content"
-                          style="padding: 0.5em;border-radius: 4px;border: 1px solid rgba(34, 36, 38, 0.15);overflow: scroll;height: 64px;max-width: 100%;max-height: 64px;margin: 0; resize: none;outline: 0;flex: 1 0 auto;line-height: 1em;"> 图片测试</textarea>
-                <button><label for="photo"><i class="icon image"></i></label><input type="file" id="photo" multiple hidden accept="image/*">
+                          style="padding: 0.5em;border-radius: 4px;border: 1px solid rgba(34, 36, 38, 0.15);overflow: scroll;height: 64px;max-width: 100%;max-height: 64px;margin: 0; resize: none;outline: 0;flex: 1 0 auto;line-height: 1em;" placeholder="lalala"> </textarea>
+                <button>
+                    <label for="photo"><i class="icon image"></i></label>
+                    <input type="file" hidden id="photo" multiple accept="image/*">
                 </button>
                 <button id="s_poster"><i class="send icon"></i></button>
             </div>
-            <div class="ui four column doubling stackable grid container" id="frame">
+            <div class="ui cards four doubling" style="margin: 0;" id="frame">
             </div>
             <p id="weather"></p>
-            <ul id="shuoshuo-ul">
+            <ul class="ui divided items" id="shuoshuo-ul">
 
             </ul>
             <p>
-                <button style="
-    padding: 5px 10px;
-    width: 100%;
-    border: 1px;
-    cursor: pointer;
-    outline: none;" onclick="loadMore()">更多
+                <button class="fluid ui button" onclick="loadMore()">更多
                 </button>
             </p>
             <a href="#"
@@ -66,41 +62,151 @@
 </body>
 </html>
 <script>
+    let readableSize = function (size) {
+        return size / 1024 > 1024 ? (~~(10 * size / 1024 / 1024)) / 10 + "MB" : ~~(size / 1024) + "KB"
+    };
+    let progress = document.querySelector('#progress');
     let imgFormData = new FormData();
     $('#photo').change(function (e) {
 
         [].forEach.call(e.target.files, function (file) {
-            console.log(file.size);
-            let nBytes = file.size,
-                aMultiples = ["KiB", "MiB", "GiB", "TiB", "PiB", "EiB", "ZiB", "YiB"],
-                nMultiple = 0, nApprox = nBytes / 1024;
-
-            sOutput = nBytes + " bytes";
-            // optional code for multiples approximation
-            for ( ; nApprox > 1; nApprox /= 1024, nMultiple++) {
-                sOutput = nApprox.toFixed(2) + " " + aMultiples[nMultiple];
-            }
-
-            let img = $('<img style="width: 100%;">');
+            let cardDiv = document.createElement('div');
+            let imgDiv = document.createElement('div');
+            cardDiv.classList.add('card');
+            imgDiv.classList.add('image');
+            let imgFrame = document.querySelector('#frame');
+            let img = new Image();
+            imgDiv.appendChild(img);
+            cardDiv.appendChild(imgDiv);
+            imgFrame.appendChild(cardDiv);
             let reader = new FileReader();
-            reader.onloadend = (function(oImg) {
-                imgFormData.append('photo', file);
-                return function(e) {
-
-                    oImg.src = e.target.result;
-                };
-            })(img.get(0));
+            reader.onloadend = function () {
+                img.src = this.result;
+                console.log(img.width);
+                console.log(img.height);
+                img.onload = function () {
+                    imgFormData.append('photo', compressImg(img, file.type, cardDiv), file.name);
+//                    let xhr = new XMLHttpRequest(), percent = 0, loop = null;
+//
+//                    xhr.open("POST", "/file");
+//
+//                    xhr.onreadystatechange = function () {
+//                        if (xhr.readyState === 4) {
+//                            if (xhr.status === 200) {
+//                                let d = JSON.parse(xhr.responseText);
+//                                console.info(d);
+//                                document.querySelector('#after').innerHTML = '图片压缩后的大小(从服务器获取到的数据)：' + readableSize(d[0].size);
+//                            } else {
+//                                console.error(xhr.responseText)
+//                            }
+//                        }
+//                    };
+//                    xhr.upload.addEventListener('progress', function(e) {
+//                        if (loop) return;
+//                        percent = ~~(100 * e.loaded / e.total);
+//                        progress.value = percent;
+//                        console.log(percent);
+//                    }, false);
+//                    xhr.send(imgFormData);
+                }
+            };
             reader.readAsDataURL(file);
-            $('#frame').append($('<div class="column" style="position: relative;"><p style="position:absolute; bottom: 0; width: 84%;height: 1em;line-height: 1em;background: rgba(165,68,68,.7)">size: ' + sOutput + '</p></div>').append(img));
         });
-    })
+    });
+
+    let compressImg = function (img, type, card) {
+        /**
+         * compress base64 img data to blob
+         * @param img: instanceof Image
+         * @param type: mimetype of img
+         * @returns: img Blob data
+         * */
+        const maxsize = 100 * 1024;
+        let imgBase64 = img.src;
+        let contentDiv = document.createElement('div');
+        let contentHeaderDiv = document.createElement('div');
+        contentDiv.classList.add('content');
+        contentHeaderDiv.classList.add('header');
+
+        contentDiv.appendChild(contentHeaderDiv);
+        card.appendChild(contentDiv);
+        if (imgBase64.length > maxsize) {
+
+            let canvas = document.createElement("canvas");
+            let ctx = canvas.getContext('2d');
+
+            let initSize = img.src.length;
+            let width = img.width;
+            let height = img.height;
+            let ratio = width * height / 4000000;
+            if (ratio > 1) {
+                ratio = Math.sqrt(ratio);
+                width /= ratio;
+                height /= ratio;
+            }
+            canvas.width = width;
+            canvas.height = height;
+            // 如果是jpeg 就添加底色为白色，因为jpeg默认会把透明部分转为黑色, 而默认的toDataURL会把图片转为PNG格式
+            if (type === 'image/jpeg') {
+                ctx.fillStyle = "#fff";
+            }
+            ctx.fillRect(0, 0, canvas.width, canvas.height);
+            // 修改图片大小
+            ctx.drawImage(img, 0, 0, width, height);
+            // 修改图片质量
+            imgBase64 = canvas.toDataURL(type);
+
+            contentHeaderDiv.innerHTML = readableSize(initSize) + ' / ' + readableSize(imgBase64.length);
+
+            console.log('压缩前：' + initSize);
+            console.log('压缩后：' + imgBase64.length);
+
+            console.log('压缩率：' + ~~(100 * (initSize - imgBase64.length) / initSize) + "%");
+            canvas.width = canvas.height = 0;
+        } else {
+            contentHeaderDiv.innerHTML = readableSize(img.src.length) + ' / ' + readableSize(img.src.length);
+        }
+
+        let text = window.atob(imgBase64.split(",")[1]);
+        let buffer = new Uint8Array(text.length);
+        for (let i = 0; i < text.length; i++) {
+            buffer[i] = text.charCodeAt(i);
+        }
+        return new Blob([buffer], {type});
+    };
 </script>
 <script>
     let timeMark = 0;
     let index = 0;
-    let locationName = '';
     let weatherInfo = {};
-    let vistorInfo = {};
+
+    let renderContent = function (res) {
+        let st = '';
+        res.forEach(function (v, i) {
+            let im = '';
+            v.images.forEach(function (iv) {
+                im += `<img src="${iv}">`
+            });
+            st += `<div class="item">
+                            <div class="content">
+                                <h3 class="header">${i + 1}: <time>${v.dateStr}</time></h3>
+                                <div class="description">
+                                    <p>${v.content}</p>
+                                    <p><i class="icon location arrow"></i>${v.weather.location}: <img class="aligned image mini spaced ui" src="./assert/weather-icon/${v.weather.code[0]}.png"> ~ <img class="aligned image mini spaced ui" src="./assert/weather-icon/${v.weather.code[1]}.png"> ${v.weather.temperature[0]}&#8451; ~ ${v.weather.temperature[1]}&#8451; </p>
+                                     <div class="images ui small">${im}</div>
+
+                                </div>
+                                <div class="extra">
+                                    <div class="ui label">${v.isPublic ? 'Public' : 'Private'}</div>
+                                </div>
+                            </div>
+                        </div>`;
+            if (i === res.length - 1) {
+                timeMark = v.date;
+            }
+        });
+        return st;
+    };
 
     let getInitList = function () {
         $(function () {
@@ -109,19 +215,9 @@
                 method: 'POST',
                 data: {limit: 20}
             }).done(function (res) {
-                let st = '';
-                res.forEach(function (v, i) {
-                    let im = '';
-                v.images.forEach(function (iv) {
-                    im += `<img style="width: 200px;" src="${iv}">`
-                });
-                    st += `<li>${i + 1}: <time>${v.dateStr}</time><p>${v.content}</p><p>${im}</p><p><i class="icon location arrow"></i>${v.weather.location}: <img src="./assert/weather-icon/${v.weather.code[0]}.png"> ~ <img src="./assert/weather-icon/${v.weather.code[1]}.png"> ${v.weather.temperature[0]}&#8451; ~ ${v.weather.temperature[1]}&#8451; </p><p>${v.isPublic}</p></li>`;
-                    if (i === res.length - 1) {
-                        timeMark = v.date;
-                    }
-                });
+                let template = renderContent(res);
                 index = res.length;
-                $('#shuoshuo-ul').html(st);
+                $('#shuoshuo-ul').html(template);
 
             }).fail(function (jqxhr) {
                 $('#shuoshuo-ul').html(`<p>${jqxhr.status}: ${jqxhr.responseText}</p>`)
@@ -134,10 +230,10 @@
             url: '/getWeather'
         }).done(function (d) {
             weatherInfo = d;
-            $('#weather').html(`<i class="icon location arrow"></i>${d.location}: <img src="./assert/weather-icon/${d.code_day}.png"> ~ <img src="./assert/weather-icon/${d.code_night}.png">${d.code_day === d.code_night ? d.text_day : d.text_day + ' 转 ' + d.text_night} ${d.low}&#8451; ~ ${d.high}&#8451; <small>timestamp: ${moment(d.queryTime).format('YYYY-MM-DD HH:mm:ss')}</small>`);
-            //<img src="${d.icon}"
+            $('#weather').html(`<div class="ui info message"><i class="icon location arrow"></i>${d.location}: <img src="./assert/weather-icon/${d.code_day}.png"> ~ <img src="./assert/weather-icon/${d.code_night}.png">${d.code_day === d.code_night ? d.text_day : d.text_day + ' 转 ' + d.text_night} ${d.low}&#8451; ~ ${d.high}&#8451; <small>timestamp: ${moment(d.queryTime).format('YYYY-MM-DD HH:mm:ss')}</small></div>`);
         }).fail(function (e) {
-            $('#weather').html(e.responseText)
+            let err = JSON.parse(e.responseText);
+            $('#weather').html(`<div class="ui error message"><p>err: ${err.name}:</p><p>message: ${err.message}</p></div>`);
         });
     };
 
@@ -150,19 +246,8 @@
             if (!res.length) {
                 alert('就这么多啦～～')
             }
-            let st = '';
-            res.forEach(function (v, i) {
-                let im = '';
-                v.images.forEach(function (iv) {
-                    im += `<img style="width: 200px;" src="${iv}">`
-                });
-                index++;
-                st += `<li>${index}: <time>${v.dateStr}</time><p>${v.content}</p><p>${im}</p><p>${v.weather}</p><p>${v.isPublic}</p></li>`;
-                if (i === res.length - 1) {
-                    timeMark = v.date;
-                }
-            });
-            $('#shuoshuo-ul').append(st);
+            let template = renderContent(res);
+            $('#shuoshuo-ul').append(template);
         }).fail(function (xhr) {
             $('#shuoshuo-ul').append(`<p>${xhr.status}: ${xhr.responseText}</p>`);
         })
@@ -179,6 +264,7 @@
                 }
             };
             imgFormData.append('obj', JSON.stringify(s));
+
             $.ajax({
                 url: '/postShuoshuo',
                 method: 'POST',
@@ -186,8 +272,11 @@
                 contentType: false,
                 data: imgFormData
             }).done(function (d) {
-                if (d.res.status === 'success') {
+                if (d.result.ok === 1 && d.result.n === 1) {
                     alert('post success.');
+                    $('#frame').html('');
+                    $('#s_content').val('');
+                    imgFormData = new FormData();
                     getInitList();
                 } else {
                     alert(`status: ${d.err.status}, type:${ d.err.type}`)
@@ -204,6 +293,6 @@
 
     $('#s_poster').click(function () {
         postShuoshuo();
-    })
+    });
 
 </script>
