--- a/public/html/shuoshuo.html
+++ b/public/html/shuoshuo.html
@@ -3,40 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <title>shuoshuo</title>
-
-    <style>
-        span.imgSize {
-            position: absolute;
-            bottom: 0;
-            height: 1rem;
-            line-height: 1rem;
-            text-align: center;
-            width: 84%;
-            left: 1rem;
-            background: rgba(0, 0, 0, .5);
-        }
-    </style>
     <script src="../lib/jquery-3.1.1.js"></script>
     <script src="../lib/moment-2.17.1.js"></script>
     <script src="../lib/semantic/dist/semantic.min.js"></script>
     <link rel="stylesheet" href="../lib/semantic/dist/semantic.min.css">
+    <style>
+        .list-group-item:first-child {
+            border-top-left-radius: 4px;
+            border-top-right-radius: 4px;
+        }
+        .list-group-item:last-child {
+            border-bottom-left-radius: 4px;
+            border-bottom-right-radius: 4px;
+        }
+        .list-group-item{
+            position: relative;
+            display: block;
+            padding: 10px 15px;
+            margin-bottom: -1px;
+            background-color: #fff;
+            border: 1px solid #ddd;
+        }
+        .badge{
+            float: right;
+            display: inline-block;
+            min-width:10px;
+            padding:3px 7px;
+            font-size:12px;
+            font-weight:700;
+            color: #fff4e4;
+            text-align: center;
+            vertical-align: middle;
+            background-color: #777;
+            border-radius: 10px;
+        }
+    </style>
 </head>
 <body style="padding: 30px;">
 <div class="ui container">
     <div class="ui grid">
         <section class="four wide column">
-            <h2>日期</h2>
-            <ul>
-                <li>2017</li>
-                <li>2016</li>
-                <li>2015</li>
-                <li>2014</li>
-            </ul>
+            <h2>Summary</h2>
+            <div id="summary" class="list-group">
+            </div>
+
         </section>
         <article class="twelve wide column">
             <div class="ui fluid massive icon input">
                 <textarea id="s_content"
-                          style="padding: 0.5em;border-radius: 4px;border: 1px solid rgba(34, 36, 38, 0.15);overflow: scroll;height: 64px;max-width: 100%;max-height: 64px;margin: 0; resize: none;outline: 0;flex: 1 0 auto;line-height: 1em;" placeholder="lalala"> </textarea>
+                          style="padding: 0.5em;border-radius: 4px;border: 1px solid rgba(34, 36, 38, 0.15);overflow: scroll;height: 64px;max-width: 100%;max-height: 64px;margin: 0; resize: none;outline: 0;flex: 1 0 auto;line-height: 1em;"
+                          placeholder="lalala"> </textarea>
                 <button>
                     <label for="photo"><i class="icon image"></i></label>
                     <input type="file" hidden id="photo" multiple accept="image/*">
@@ -50,7 +66,7 @@
 
             </ul>
             <p>
-                <button class="fluid ui button" onclick="loadMore()">更多
+                <button class="fluid ui button" onclick="loadList({time: timeMark})">更多
                 </button>
             </p>
             <a href="#"
@@ -177,7 +193,6 @@
 </script>
 <script>
     let timeMark = 0;
-    let index = 0;
     let weatherInfo = {};
 
     let renderContent = function (res) {
@@ -189,7 +204,7 @@
             });
             st += `<div class="item">
                             <div class="content">
-                                <h3 class="header">${i + 1}: <time>${v.dateStr}</time></h3>
+                                <h3 class="header"><time>${v.dateStr}</time></h3>
                                 <div class="description">
                                     <p>${v.content}</p>
                                     <p><i class="icon location arrow"></i>${v.weather.location}: <img class="aligned image mini spaced ui" src="./assert/weather-icon/${v.weather.code[0]}.png"> ~ <img class="aligned image mini spaced ui" src="./assert/weather-icon/${v.weather.code[1]}.png"> ${v.weather.temperature[0]}&#8451; ~ ${v.weather.temperature[1]}&#8451; </p>
@@ -208,6 +223,31 @@
         return st;
     };
 
+    let getSummary = function () {
+        let summary = document.querySelector('#summary');
+        summary.innerHTML = '';
+        fetch('/getSummary', {method: "POST"}).then(function (d) {
+            if (d.ok) {
+                d.json().then(function (s) {
+                    let data = s[0].summary;
+                    Object.keys(data).forEach(v => {
+                        let a = document.createElement('a');
+                        let arg = {year: v};
+//                        a.onclick = loadList(arg);
+                        a.classList.add('list-group-item');
+                        a.innerHTML = `${v} <span class="badge">${data[v]}</span>`;
+                        if (v === 'all') {
+                            summary.prepend(a)
+                        } else {
+                            summary.appendChild(a);
+                        }
+                    });
+                })
+            }
+        }, function (e) {
+            console.log(e)
+        })
+    };
     let getInitList = function () {
         $(function () {
             $.ajax({
@@ -216,38 +256,42 @@
                 data: {limit: 20}
             }).done(function (res) {
                 let template = renderContent(res);
-                index = res.length;
                 $('#shuoshuo-ul').html(template);
-
+                getSummary();
             }).fail(function (jqxhr) {
                 $('#shuoshuo-ul').html(`<p>${jqxhr.status}: ${jqxhr.responseText}</p>`)
             });
         });
     };
+
     let getWeather = function () {
         $.ajax({
             method: 'POST',
             url: '/getWeather'
         }).done(function (d) {
             weatherInfo = d;
-            $('#weather').html(`<div class="ui info message"><i class="icon location arrow"></i>${d.location}: <img src="./assert/weather-icon/${d.code_day}.png"> ~ <img src="./assert/weather-icon/${d.code_night}.png">${d.code_day === d.code_night ? d.text_day : d.text_day + ' 转 ' + d.text_night} ${d.low}&#8451; ~ ${d.high}&#8451; <small>timestamp: ${moment(d.queryTime).format('YYYY-MM-DD HH:mm:ss')}</small></div>`);
+            $('#weather').html(`<div class="ui info message"><i class="icon location arrow"></i>${d.location}: <img class="aligned image mini spaced ui" src="./assert/weather-icon/${d.code_day}.png"> ~ <img class="aligned image mini spaced ui" src="./assert/weather-icon/${d.code_night}.png">${d.code_day === d.code_night ? d.text_day : d.text_day + ' 转 ' + d.text_night} ${d.low}&#8451; ~ ${d.high}&#8451; <small>timestamp: ${moment(d.queryTime).format('YYYY-MM-DD HH:mm:ss')}</small></div>`);
         }).fail(function (e) {
             let err = JSON.parse(e.responseText);
             $('#weather').html(`<div class="ui error message"><p>err: ${err.name}:</p><p>message: ${err.message}</p></div>`);
         });
     };
 
-    let loadMore = function () {
+    let loadList = function (options) {
         $.ajax({
             url: '/getShuoshuoList',
             method: 'POST',
-            data: {time: timeMark}
+            data: options
         }).done(function (res) {
             if (!res.length) {
                 alert('就这么多啦～～')
             }
             let template = renderContent(res);
-            $('#shuoshuo-ul').append(template);
+            if (options.year) {
+                $('#shuoshuo-ul').html(template);
+            } else {
+                $('#shuoshuo-ul').append(template);
+            }
         }).fail(function (xhr) {
             $('#shuoshuo-ul').append(`<p>${xhr.status}: ${xhr.responseText}</p>`);
         })
